--- a/Andross/Dockerfile
+++ b/Andross/Dockerfile
@@ -28,10 +28,12 @@ ENV DB_PASSWORD=<YOUR_DB_PASSWORD>
 ENV DISCORD_COMMAND_PREFIX=$
 ENV DISCORD_TOKEN=<YOUR_DISCORD_TOKEN>
 
+# Copy to /etc/environment
+RUN env >> /etc/environment
+
 # Create cron job to run create_snapshot.py, every 20 minutes and then every once a day at midnight, then run cron
 RUN crontab crontab
 RUN touch /var/log/cron.log
-RUN tail -f /var/log/cron.log &
 
 RUN mv entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
