Changed name of API_KEY environment variable to not cause issues when copying to /etc/environment

--- a/Andross/Dockerfile
+++ b/Andross/Dockerfile
@@ -21,7 +21,7 @@ RUN pip install -r requirements.txt
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/Andross
 ENV API_URL=<YOUR_API_URL>
-ENV API-KEY=<YOUR_API_KEY>
+ENV API_KEY=<YOUR_API_KEY>
 ENV DB_HOST=<YOUR_DB_HOST>
 ENV DB_PORT=<YOUR_DB_PORT>
 ENV DB_NAME=<YOUR_DB_NAME>
